--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,7 +9,7 @@ readme = "README.md"
 license = { file = "LICENSE" }
 classifiers = ["License :: OSI Approved :: MIT License"]
 dynamic = ["version", "description"]
-dependencies = ["typing_extensions", "rich"]
+dependencies = ["typing_extensions", "rich", "networkx"]
 
 [project.optional-dependencies]
-tests = ['pytest', "pyyaml", "lark", "pytest-cov"]
+tests = ['pytest', "pyyaml", "lark"]
